# task-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: database.py  dependencies.py  main.py
app/exceptions/: TaskNotFoundException.py
app/models/: task.py
app/repositories/: task_repository.py
app/routers/: task_endpoints.py
app/schemas/: pagination.py  task.py  task_filters.py
app/services/: pagination_factory.py  task_service.py
docker/: entrypoint.sh  health_check.py
fastapi/: values.yaml
fastapi/templates/: deployment.yaml
migrations/: env.py
migrations/versions/: 3ee7671abe6b_create_tasks_table.py
tests/: conftest.py
tests/api/: test_task_endpoints.py
tests/unit/: test_task_service.py
